--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.17.12",
-    "@chrisbook/bridge-core": "^1.0.2",
+    "@chrisbook/bridge-core": "^1.0.4",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.2",
@@ -24,6 +24,7 @@
     "react-firebase-hooks": "^5.0.3"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.6",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
@@ -38,6 +39,6 @@
     "meow": "^10.1.2",
     "prettier": "^2.6.2",
     "prettier-plugin-organize-imports": "^2.3.4",
-    "typescript": "4.6.3"
+    "typescript": "^4.4.4"
   }
 }
